# SafeChain

./: .gitignore  README.md
backend/: Cargo.toml  Dockerfile  docker.compose.yaml  schema.sql
backend/ai-service/: Dockerfile  check_db.py  model.pt  model_state.pt  requirements.txt  test_infer.py  test_model.py
backend/ai-service/app/: config.py  create_tables.py  db.py  main.py  models.py  requirements.txt
backend/ai-service/app/models/: __init__.py  audit_log.py  event.py  password_event.py  phishing.py  user.py
backend/ai-service/app/routes/: anomaly.py  api.py  audit.py  auth.py  events.py  infer.py  password.py  phishing.py
backend/ai-service/app/schemas/: audit_log.py  event.py  infer.py  password_event.py  phishing.py  user.py
backend/ai-service/app/services/: ai_service.py  db_service.py  model_loader.py
backend/src/: db.rs  main.rs  models.rs  supabase.rs
backend/src/routes/: api.rs  auth.rs  infer.rs  mod.rs
backend/src/utils/: jwt.rs
frontend/: .npmrc  Dockerfile  next.config.js  package-lock.json  package.json
frontend/components/: rust_demo.tsx
frontend/lib/: api.ts  authClient.ts
frontend/pages/: _app.tsx  index.tsx  infer.tsx  login.tsx
frontend/styles/: globals.css
