[package]
name = "backend"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <you@example.com>"]
description = "SafeChain Rust backend with Supabase/Postgres and Axum"
license = "MIT"
repository = "https://github.com/yourusername/safechain-backend"

[dependencies]
tokio = { version = "1.41", features = ["full"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "macros"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.3", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
argon2 = "0.4"
